<resources>
    <string name="app_name">Nasi Goreng Top</string>
    <string name="pesan">Pesan</string>
    <string-array name="name_top_other">
        <item>PAKET EKONOMIS 1</item>
        <item>PAKET EKONOMIS 2</item>
        <item>PAKET EKONOMIS 3</item>
        <item>PAKET EKONOMIS 4</item>
        <item>PAKET EKONOMIS 5</item>
        <item>PAKET EKONOMIS 6</item>
        <item>PAKET HEMAT A</item>
        <item>PAKET HEMAT B</item>
        <item>PAKET KARYAWAN 1</item>
        <item>PAKET KARYAWAN 2</item>
        <item>PAKET KARYAWAN 3</item>
        <item>PAKET KARYAWAN 4</item>
        <item>PAKET KABITA SPECIAL 1</item>
        <item>PAKET KABITA SPECIAL 2</item>
        <item>PAKET KABITA SPECIAL 3</item>
        <item>PAKET RAMADHAN 1</item>
        <item>PAKET RAMADHAN 2</item>
        <item>PAKET RAMADHAN 3</item>
        <item>PAKET MERDEKA A</item>
        <item>PAKET MERDEKA B</item>
        <item>NASI PUTIH</item>
        <item>TELOR CEPLOK</item>
        <item>KRUPUK RAMBAK</item>
        <item>KRUPUK MEJA</item>
        <item>KRUPUK UDANG</item>
        <item>USUS</item>
        <item>USUS KECIL</item>
        <item>KACANG KECIL</item>
        <item>MENTE</item>
        <item>PEMBUNGKUS</item>
    </string-array>
    <string-array name="name_top_food">
        <item>NASI GORENG TOP</item>
        <item>NASI GORENG KABITA</item>
        <item>NASI GORENG SPESIAL</item>
        <item>NASI GORENG AYAM</item>
        <item>NASI GORENG MAWUT</item>
        <item>NASI GORENG SEAFOOD</item>
        <item>NASI GORENG BAKSO</item>
        <item>NASI GORENG HOT</item>
        <item>NASI GORENG NUGGET</item>
        <item>NASI GORENG SOSIS</item>
        <item>NASI GORENG UDANG</item>
        <item>NASI GORENG IKAN ASIN</item>
        <item>NASI GORENG PETE</item>
        <item>MIE GORENG AYAM</item>
        <item>MIE GORENG TOP</item>
        <item>MIE GORENG SPESIAL</item>
        <item>MIE GORENG SEAFOOD</item>
        <item>MIE KUAH AYAM</item>
        <item>MIE KUAH TOP</item>
        <item>BIHUN GORENG</item>
        <item>CAP CAY</item>
        <item>MIE CAP CAY</item>
        <item>NASI CAP CAY</item>
        <item>TAMI CAP CAY</item>
        <item>KWETIAW GORENG AYAM</item>
        <item>KWETIAW GORENG TOP</item>
        <item>KWETIAW GORENG SPESIAL</item>
        <item>KWETIAW GORENG SEAFOOD</item>
        <item>BAKSO</item>
        <item>BAKSO JUMBO</item>
        <item>CHICKEN STEAK</item>
        <item>MIE HOT PLATE</item>
        <item>KWETIAW HOT PLATE</item>
        <item>GEPREK BESAR</item>
        <item>GEPREK KECIL</item>
    </string-array>
    <string-array name="price_top_food">
        <item>20</item>
        <item>13</item>
        <item>20</item>
        <item>16</item>
        <item>16</item>
        <item>20</item>
        <item>16</item>
        <item>10</item>
        <item>20</item>
        <item>16</item>
        <item>20</item>
        <item>17</item>
        <item>16</item>
        <item>17</item>
        <item>21</item>
        <item>21</item>
        <item>21</item>
        <item>17</item>
        <item>20</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>22</item>
        <item>22</item>
        <item>17</item>
        <item>21</item>
        <item>21</item>
        <item>21</item>
        <item>12</item>
        <item>15</item>
        <item>17</item>
        <item>18</item>
        <item>18</item>
        <item>18</item>
        <item>16</item>
    </string-array>
    <string-array name="price_gojek_food">
        <item>24</item>
        <item>16</item>
        <item>24</item>
        <item>19</item>
        <item>19</item>
        <item>24</item>
        <item>19</item>
        <item>12</item>
        <item>24</item>
        <item>19</item>
        <item>24</item>
        <item>20</item>
        <item>19</item>
        <item>20</item>
        <item>25</item>
        <item>25</item>
        <item>25</item>
        <item>20</item>
        <item>24</item>
        <item>20</item>
        <item>22</item>
        <item>23</item>
        <item>26</item>
        <item>26</item>
        <item>20</item>
        <item>26</item>
        <item>26</item>
        <item>26</item>
        <item>14</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>22</item>
        <item>22</item>
        <item>19</item>
    </string-array>
    <string-array name="name_top_drink">
        <item>AIR MINERAL</item>
        <item>TEH HANGAT</item>
        <item>ES TEH</item>
        <item>JERUK HANGAT</item>
        <item>ES JERUK</item>
        <item>TEH BOTOL</item>
        <item>FRUIT TEA</item>
        <item>FRUIT TEA KOTAK</item>
        <item>LEMON TEA</item>
        <item>TEH KOTAK</item>
        <item>MILKSHAKE</item>
        <item>JUS ALPUKAT</item>
        <item>JUS WORTEL</item>
        <item>JUS JAMBU MERAH</item>
        <item>JUS JERUK</item>
        <item>JUS MELON</item>
        <item>JUS TOMAT</item>
        <item>CAPPUCINO</item>
        <item>KOPI</item>
        <item>TEBS</item>
    </string-array>
    <string-array name="price_top_drink">
        <item>5</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>7</item>
        <item>5</item>
        <item>5</item>
        <item>4</item>
        <item>7</item>
        <item>4</item>
        <item>10</item>
        <item>14</item>
        <item>10</item>
        <item>12</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>7</item>
        <item>5</item>
        <item>5</item>
    </string-array>
    <string-array name="price_gojek_drink">
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>8</item>
        <item>8</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>8</item>
        <item>6</item>
        <item>12</item>
        <item>17</item>
        <item>12</item>
        <item>15</item>
        <item>12</item>
        <item>12</item>
        <item>12</item>
        <item>8</item>
        <item>10</item>
        <item>10</item>
    </string-array>
    <string-array name="price_top_other">
        <item>17</item>
        <item>18</item>
        <item>18</item>
        <item>19</item>
        <item>14</item>
        <item>18</item>
        <item>16</item>
        <item>17</item>
        <item>12</item>
        <item>13</item>
        <item>13</item>
        <item>14</item>
        <item>18</item>
        <item>20</item>
        <item>20</item>
        <item>17</item>
        <item>18</item>
        <item>18</item>
        <item>17</item>
        <item>22</item>
        <item>5</item>
        <item>5</item>
        <item>6</item>
        <item>5</item>
        <item>1</item>
        <item>10</item>
        <item>5</item>
        <item>1</item>
        <item>5</item>
        <item>1</item>
    </string-array>
    <string-array name="price_gojek_other">
        <item>16</item>
        <item>17</item>
        <item>16</item>
        <item>19</item>
        <item>13</item>
        <item>17</item>
        <item>19</item>
        <item>20</item>
        <item>12</item>
        <item>13</item>
        <item>13</item>
        <item>14</item>
        <item>18</item>
        <item>20</item>
        <item>20</item>
        <item>17</item>
        <item>18</item>
        <item>18</item>
        <item>17</item>
        <item>22</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>5</item>
        <item>1</item>
        <item>10</item>
        <item>5</item>
        <item>1</item>
        <item>5</item>
        <item>1</item>
    </string-array>
    <string name="total_0">Total: 0</string>
    <string name="koki">Koki</string>
    <string name="cetak">Cetak</string>
    <string name="pesan_gojek">Pesan Gojek</string>
    <string name="bayar">Bayar:</string>
    <string name="kembalian">Kembalian:</string>
    <string name="pilih_meja">Pilih Meja</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="discount">Discount</string>
    <string name="voucher">Voucher</string>
    <string name="cek_total_sales">Cek Total Sales</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="harga">Harga</string>
    <string name="harga_gojek">Harga Gojek</string>
    <string name="buat">Buat</string>
</resources>