<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#545454"/>

    <LinearLayout
            android:id="@+id/meja_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="100dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_height="match_parent"
                android:text="@string/pilih_meja"/>

        <RadioGroup
                android:id="@+id/rg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:layout_marginRight="10dp"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:layout_marginRight="10dp"/>

        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <CheckBox
                android:id="@+id/cb_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:id="@+id/tv_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_light"
                android:layout_alignParentRight="true"
                android:layout_marginRight="18dp"/>

        <CheckBox
                android:id="@+id/cb_voucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voucher"
                android:layout_marginLeft="100dp"
                android:layout_alignParentLeft="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_bayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bayar"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

        <EditText
                android:id="@+id/edt_bayar"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="64dp"/>


        <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="27dp"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_kembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/kembalian"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"/>

        <Button
                android:id="@+id/btn_koki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koki"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"/>

        <Button
                android:id="@+id/btn_pesan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cetak"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>